--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -1,7 +1,5 @@
 
-# Name your project! Project names should contain only lowercase characters
-# and underscores. A good package name should reflect your organization's
-# name or the intended use of these models
+# training name
 name: 'jaffle_shop'
 version: '1.0.0'
 
@@ -30,6 +28,8 @@ clean-targets:         # directories to be removed by `dbt clean`
 # In this example config, we tell dbt to build all models in the example/ directory
 # as tables. These settings can be overridden in the individual model files
 # using the `{{ config(...) }}` macro.
+### I need to learn more about this, especially with the idea of setting up ###
+### multiple related models in different schemas in redshift                ###
 models:
   jaffle_shop:
       # Applies to all files under models/example/
