--- a/models/staging/jaffle_shop/src_jaffle_shop.yml
+++ b/models/staging/jaffle_shop/src_jaffle_shop.yml
@@ -1,5 +1,3 @@
-## add custom staleness tests ("freshness") define at the source level, and/or override at table level
-
 version: 2
 
 sources:
@@ -13,4 +11,17 @@ sources:
             tests:
               - unique
               - not_null
-        
+
+      - name: orders
+        loaded_at_field: ORDER_DATE
+        freshness:
+          warn_after: {count: 12, period: hour}
+          error_after: {count: 24, period: hour}
+        columns:
+          - name: ID
+            tests:
+              - unique
+              - not_null
+          - name: customer_id
+            tests:
+              - not_null
